# xtts-api-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml  nginx.conf
xtts_api_server/: __main__.py  modeldownloader.py  server.py  strem_fun.py  tts_funcs.py
xtts_api_server/RealtimeTTS/engines/: coqui_engine.py
