[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "xtts-api-server"
version = "0.8.4"
authors = [
  { name="daswer123", email="daswerq123@gmail.com" },
]
description = "A simple FastAPI server to host XTTSv2"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "PyAudio==0.2.14",
  "requests==2.31.0",
  "pyttsx3==2.90",
  "stream2sentence==0.2.2",
  "fastapi>=0.104.1",
  "loguru",
  "pydantic",
  "pydub",
  "python-dotenv",
  "torch",
  "torchaudio",
  "uvicorn",
  "cutlet",
  'fugashi[unidic-lite]',
  "TTS @ git+https://github.com/coqui-ai/TTS@fa28f99f1508b5b5366539b2149963edcb80ba62"
"transformers==4.36.2"
"python-multipart==0.0.6"
"typing-extensions>=4.8.0"
"numpy==1.24.3"
"mecab-python3==1.0.6"
"unidic==1.1.0"
]

[project.urls]
Homepage = "https://github.com/daswer123/xtts-api-server"
"Bug Tracker" = "https://github.com/daswer123/xtts-api-server/issues"

[tool.hatch.build.targets.wheel]
only-include=["xtts_api_server"]